# agent-lib-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
agent-lib/: CMakeLists.txt
agent-lib/include/agent_lib/: agent_lib.h
agent-lib/src/: agent_lib.cc  agent_lib.cpp  main.cpp
docker/: build  build-run  run
docker/internal/: shared
main-example/: CMakeLists.txt  main.cc
